syntax = "proto3";

package order;

option go_package = "taskzeroone/internal/grpc/pb";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
}
service CancelService{
    rpc CancelOrder (CancelOrderRequest) returns (CancelOrderResponse);
}

message CreateOrderRequest {
  int32 id = 1;
}

message CreateOrderResponse {
  //string status = 1;
  int32 statusCode = 1;
  string msg = 2;
}
message CancelOrderRequest {
   // string status = 1;
    int32 id = 1;
}

message CancelOrderResponse {
 // string status = 1;
  int32 statusCode = 1;
  string msg = 2;

}